# twentyone

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: solo_cli.rs
src/: cards.rs  game.rs  lib.rs  prelude.rs
tests/: tests.rs
