[package]
name = "twentyone"
version = "0.1.0"
authors = ["Adam Thompson-Sharpe <adamthompsonsharpe@gmail.com>"]
edition = "2018"
description = "A blackjack engine for Rust."
documentation = "https://docs.rs/crate/twentyone"
readme = "README.md"
repository = "https://github.com/MysteryBlokHed/twentyone"
license = "Apache-2.0"
keywords = ["library", "game", "blackjack", "gambling", "casino"]
categories = ["game-engines", "games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
