[package]
name = "twentyone"
version = "0.2.0"
authors = ["Adam Thompson-Sharpe <adamthompsonsharpe@gmail.com>"]
edition = "2018"
description = "A blackjack engine for Rust."
documentation = "https://docs.rs/crate/twentyone"
readme = "README.md"
repository = "https://github.com/MysteryBlokHed/twentyone"
license = "Apache-2.0"
keywords = ["library", "game", "blackjack", "gambling", "casino"]
categories = ["game-engines", "games"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
rand = "0.8"
